--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,30 +1,30 @@
 ---
-title: 2022.2.9大直播后记：智慧灭共
+title: 美41位参议员敦促贸易代表建立全面对华关税程序
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1981843/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1981883/)
 
-**整理：清水冷香、Lucy Liu
-编辑：Candy**
+**撰稿：日本东京方舟农场  幽蘭自得**
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-419.png)
+据《美国之音》2月9日报道，美国四十一位跨党派的联邦参议员致函美国贸易代表戴琪(Katherine Tai)，敦促她建立一个更全面的程序，将一些中共国进口产品排除在惩罚性的关税之外。这些参议员表示，这不仅会缓解这些关税给美国商家带来的负面影响，而且会使它们有更多的时间和资源把供应链转移出中国并使制造业回流美国。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-149.jpg)图为2019年6月美中贸易战期间，洛杉矶港堆放的集装箱（图片来自Frederick J. Brown/AFP via Getty Images）
+据报道，以俄亥俄州共和党籍参议员罗布·波特曼(Rob Portman)和特拉华州民主党籍参议员汤姆·卡珀(Tom Carper)领衔的41位参议员2月7日在信中表示，他们强烈支持为美国制造商、生产商和进口商有关减免对中共国产品征收的关税的申请建立一个全面的程序。
 
+这些参议员认为，在新冠疫情还在持续的情况下，这个关税排除程序的“狭隘性质”，“可能会阻止陷入困境的企业和制造商获得他们迫切需要的救济”。他们说，根据最初的排除程序，只有1%的进口产品有资格得到考虑。
 
-中、美、俄在冬奥会以后，实际上是三角力量的实质性的改变。（对）爆料革命会有什么受益，什么影响？
+“我们认为，为受关税影响的企业提供一个申请有限但可延续的关税减免机会的全面性的排除程序，是我们反击中（共）国不公平贸易做法战略中一个有价值的组成部分，”他们在信中写道。“除了减轻关税对美国企业的负面影响外，它还将让这些企业有更多的时间和资源，将供应链移出中（共）国，并将制造业重新带回美国。”
 
-灭共几乎是人类万年来最难的一件事儿，大家千万别想当然，或者必然，或者容易，那是犯了极端错误，那就犯了同共产党同样的错误。灭共，我们不是对任何人的责任，也不是我们的保证，也不是我们必须做的事。但是我们必须灭掉共产党。
- 
-怎么灭掉共产党？智慧地灭掉共产党。我们要灭全人类最大的一个坏蛋——共产党，人家都觉得是不可能的。咱没有军队，没有任何组织，还不流血，你去想一想。你可以纵观人类历史，地球这百万亿年来，地球和银河系里没人说过，说不流血要改变一个这么大的流氓组织、黑社会组织。想都没想过，不要说做，想都没想过。
+他们认为，重启一个全面性的关税排除程序既可以使美国继续对中共施压，同时也可以减轻关税给美国商家和工人带来的经济痛苦。
 
-释迦牟尼没这么说过，阿拉也没这么说过，耶稣也没这么说过，天主也没这么说过，没有人这么说过。我们中国的老天爷，玉皇大帝都没这么说过。 我们现在所干的事情，几乎是人类上，地球上，物理上不可能的事。但是真的拜万佛万神所赐，我们真的是在接近完成，而且一定会完成。消灭这个共产党！
+不过，拜登总统1月20日在一次记者会上曾表示，他知道有些商业团体正强烈要求他开始降低川普政府对中共国商品征收的关税，而且美国贸易代表戴琪正在就这个议题进行努力，但他同时表示，解除对中共国商品的关税的时机还未成熟。
 
-***发布：Candy***
+川普政府2018年根据1974年《贸易法》第301条的规定开始对价值3千多亿美元的中共国产品加征惩罚性的关税。尽管美中双方在2020年1月签署了第一阶段贸易协议，并批准了对一些产品进行关税豁免，但是相当一部分的关税并未取消。拜登政府上台后，美国贸易代表办公室对美中贸易关系进行了全面的审议，并在去年10月4日宣布对中共国产品恢复“有针对性的、潜在的”关税排除程序。
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场](https://twitter.com/HimalayaAthena1)[Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场](https://www.gettr.com/user/himalayaathena)[Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场](https://discord.gg/KQQVvwBNvm)[Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[GTV](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[直播](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[1](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+参考链接：
+[https://www.voachinese.com/a/us-china-trade-tariffs-20220208/6433060.html](https://www.voachinese.com/a/us-china-trade-tariffs-20220208/6433060.html)
+
+素材采编：幽蘭自得
+编辑：老孙
+发布：爱放飞
 
  
 
