--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,150 +1,34 @@
 ---
-title: 两年来，CDC无视数据，甚至撒谎,将自然免疫当成阴谋论
+title: 朗诵佳作欣赏《匆匆》
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1981794/)
+`喜马拉雅纽约磐石农场` [轉載自GNews](https://gnews.org/zh-hans/1981842/)
 
-[https://gtv.org/video/id=6204153b585ecc15d73f7d61](https://gtv.org/video/id=6204153b585ecc15d73f7d61)
+视频编辑：Jenny / 字幕：文朗
+[朱自清的散文《匆匆》写于1922年3月](https://baike.baidu.com/item/%E5%8C%86%E5%8C%86/1577840)，恰逢“五四”运动落潮期。当时的“五四”知识青年忙于救国，忙于追求进步；他们备受当时政治环境的压迫，却没有停止追求进步的脚步；他们苦恼，彷徨，却在冷静的沉思后，继续追赶人生的路。
 
-Rep. Thomas Massie
-托马斯·马西议员
+**历史又在重演，一百年过去了，五四青年换成了新中国联邦人，换做遍布在五湖四海全球各地的“你我他她”，这一次是在文贵先生的带领下，不变的主题依然是要替中国人民追求“民主，法制和自由”，这就是我们的使命！不但誓将共产党送进地狱，同时也要与全世界的黑暗势力作斗争，传播病毒疫苗真相。多少屈辱与不公，但是挡不住我们追求正道主义，重建中华文明的决心。**
 
-One of the biggest scandals during this whole pandemic, is the cover up
-在整个大流行期间, 最大的丑闻之一就是掩盖
+*朱自清《给俞平伯的信》一文中写到：“生活中的各种过程都有它独立的意义和价值——每一刹那有它的意义与价值!每一刹那在持续的时间里，有它相当的位置。”*
 
-That’s been committed by Fauci and the CDC, especially the CDC
-福奇和疾病预防控制中心已经承认，尤其是疾病预防控制中心
+《匆匆》全文：
 
-about the effectiveness of immunity that’s conferred after a natural infection
-关于自然感染后赋予的免疫力的有效性
+燕子去了，有再来的时候；杨柳枯了，有再青的时候；桃花谢了，有再开的时候。但是，聪明的，你告诉我，我们的日子为什么一去不复返呢？- – 是有人偷了他们罢：那是谁？又藏在何处呢？是他们自己逃走了罢：现在又到了哪里呢？
 
-after you recover from that
-在你从自然感染中恢复后
+我不知道他们给了我多少日子；但我的手确乎是渐渐空虚了。在默默里算着，八千多日子已经从我手中溜去；像针尖上一滴水滴在大海里，我的日子滴在时间的流里，没有声音，也没有影子。我不禁头涔涔而泪潸潸了。
 
-they’ve completely ignored that
-他们完全忽略了这一点
+去的尽管去了，来的尽管来着；去来的中间，又怎样地匆匆呢？早上我起来的时候，小屋里射进两三方斜斜的太阳。太阳他有脚啊，轻轻悄悄地挪移了；我也茫茫然跟着旋转。于是洗手的时候，日子从水盆里过去；吃饭的时候，日子从饭碗里过去；默默时，便从凝然的双眼前过去。我觉察他去的匆匆了，伸出手遮挽时，他又从遮挽着的手边过去，天黑时，我躺在床上，他便伶伶俐俐地从我身上跨过，从我脚边飞去了。等我睁开眼和太阳再见，这算又溜走了一日。我掩着面叹息。但是新来的日子的影儿又开始在叹息里闪过了。
 
-They want everybody to get vaccinated
-他们希望每个人都接种疫苗
+在逃去如飞的日子里，在千门万户的世界里的我能做些什么呢？只有徘徊罢了，只有匆匆罢了；在八千多日的匆匆里，除徘徊外，又剩些什么呢？过去的日子如轻烟，被微风吹散了，如薄雾，被初阳蒸融了；我留着些什么痕迹呢？我何曾留着像游丝样的痕迹呢？我赤裸裸来到这世界，转眼间也将赤裸裸的回去罢？但不能平的，为什么偏要白白走这一遭啊？
 
-even those who don’t need vaccinated
-即使是那些不需要接种疫苗的人
+你聪明的，告诉我，我们的日子为什么一去不复返呢？
 
-and the science if you follow the science on this
-关于科学，如果你遵循这方面的科学
+朗诵：文朗
 
-The Moderna trial showed there was no benefit of the vaccine to those who recov-ered from infection
-莫德纳试验表明，疫苗对那些从感染中恢复过来的人没有好处
+撰稿/视频制作：Jenny
 
-The Pfizer trial showed there was no benefit to those who had recovered from in-fection from the vaccine
-辉瑞的试验表明，疫苗对那些从病毒感染中恢复过来的人没有任何好处
+配乐/字幕：文朗
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GTV.jpg)磐石农场Discord![](https://assets.gnews.org/wp-content/uploads/2022/01/GTV.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/b3df4b36-df11-4361-a8f5-6c7e5f9da569.jpg)
 
-A recent study with 52,000 people at the Cleveland Clinic
-最近在克利夫兰诊所对52,000人进行的一项研究表明
-
-300 plus of whom did not receive the vaccine
-其中1300多人没有接种疫苗
-
-but had prior infection showed that none of them got reinfected, symptomatically
-但之前曾经感染过，结果表明他们没有人再次感染，或有症状
-
-and then if you want to compare the efficacy of immunity from recovering from COVID to that of the vaccine
-然后如果你想比较从 COVID 中恢复的免疫力与疫苗的功效
-
-the biggest study out there is the whole country of Israel
-最大的研究的国家是整个以色列
-
-Tel Aviv University, 6 million participants in this study, 6 million data points
-以色列特拉维夫大学的600万参与者参与了这项研究，600 万个数据点
-
-And it showed there’s virtually no difference actually is it showed a little bit
-它表明实际上几乎没有差异，它显示了一点
-
-but probably not statistically significant, a little bit better
-但可能没有统计学意义，对自然感染的免疫力要好一点
-
-immunity from natural infection and before you all report this
-在你们所有人报告之前
-
-I’m not saying go out and get the virus instead of getting the vaccine
-我不是说出去感染病毒而不去接种疫苗
-
-The vaccine can save lives and certain
-疫苗可以挽救生命和肯定的
-
-but there’s no need, the science shows this
-但没必要，科学证明了这一点
-
-There’s no need to get the vaccine if you’ve already recovered from COVID
-如果您已经从COVID中康复，则无需接种疫苗
-
-And then there’s no need to expose yourself to that danger
-然后就没有必要让自己暴露在那种危险之中
-
-The CDC knows this, they admitted to me on a recorded phone call
-疾病预防控制中心知道这一点，他们通过录了音的电话向我承认了这一点
-
-I’ll be glad to give you that they knew they were misreporting the results of the Pfizer data
-我很高兴告诉你他们知道他们误报了辉瑞数据的结果
-
-Reporter
-记者
-
-Number one you didn’t answer whether or not you’ve been vaccinated
-第一个你没有回答你是否接种过疫苗
-
-Rep. Thomas Massie
-托马斯·马西议员
-
-Well first of all, it’s none of your business
-好吧，首先，这不关你的事
-
-But I’m going to tell you, I’m not vaccinated
-但我要告诉你，我没有接种疫苗
-
-And until there’s some science
-直到有一些科学依据
-
-by the way I have a Master’s of Science degree from MIT
-顺便说一句，我拥有麻省理工学院的理学硕士学位
-
-I’m not a virologist, but I can read data
-我不是病毒学家，但我可以读取数据
-
-Everybody just needs to read it
-每个人只需要阅读它
-
-Don’t put your head in the sand. Look at the data.
-不要把头埋在沙子里，看看数据
-
-I’m not going to get the vaccine until there’s data that shows
-我不会接种疫苗，直到有数据表明
-
-that it will improve upon the immunity
-它会提高免疫力
-
-that’s been conferred to me as a result of a natural infection that I had
-由于我的一次自然感染，而我被授予了这一权利
-
-**原视频链接**[:](https://twitter.com/repthomasmassie/status)[https://twitter.com/repthomasmassie/status](https://twitter.com/repthomasmassie/status)
-
-Date:02/06/2022
-原视频标题: For 2 years, CDC ignored the data and even lied about it to treat natural immunity like a conspiracy theory
-两年来，CDC无视数据，甚至撒谎，将自然免疫当成阴谋论
-原视频日期：2022/02/08
-原视频链接https://twitter.com/repthomasmassie/status/1490783499883847680?s=24
-任务编号：KE392(3699)
-视频时间段 : 0:00-2:34
-
-英听校：洛杉矶盘古农场 – Layka
-翻译：洛杉矶盘古农场 – Layka
-翻译终校：洛杉矶盘古农场 – Mike Li
-字幕+视频制作：洛杉矶盘古农场-天涯行
-审片：洛杉矶盘古农场- 银龙
-发布：洛杉矶盘古农场 – 彩虹 Rainbow
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
