--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,33 +1,17 @@
 ---
-title: “军人在战场上可以是英雄，你们也是英雄”
+title: 忘掉痛苦，不懂感恩！必有更大的灾难！
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1981653/)
+`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/1981767/)
 
-#### 编译： Cran
+北京时间2月9日晚，在文贵先生的直播中提到一个善于遗忘，忘掉痛苦与灾难，而内心不懂感恩的民族，未来必定会有更大的灾难在等着你！
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/16444481951.png)
-Image source: CTV.ca
+在中共统治下，太多的中国人总是那么的善于遗忘，无法铭记苦难不去深思。正如文贵先生所说，车祸一星期忘掉，六四天安门事件三星期忘掉，香港万人被奸被杀不超过三个月忘掉，郑州水灾不超过半年忘掉……
 
-大使(Ambassador) 桥是一座连结底特律,密歇根州（Detroit, Michigan）和温莎, 安大略省（Windsor，Ontario）横跨美加的最大桥梁，是北美的一条主要的经济动脉。短暂的关闭就马上暴露出其供应链的脆弱性。那曾是卡车司机们熟悉的赖以生存的桥梁，但为了生存和加拿大的未来，他们不得不暂时的关闭它。
+灾难或许并不可怕，总有渡过的办法，真正可怕的是遗忘，让灾难一次次的重演！中共给中国人灌输了太多的仇恨教育，由于仇恨，不懂感恩，由于仇恨变得暴虐麻木，总是那么的不去深思。仇恨教育下人们怀疑的太多，信任的太少，孤单冷漠猜疑，凡是事不关己，没有必要去铭记，遗忘反而是种洒脱！
 
-同时浮出水面的是这座桥的拥有者，马特 ·莫伦（Matt Moroun）家族。它与加拿大政府持续了长达数年的斗争。莫伦家族在一份声明中说，贸易需要恢复，他的家庭对“卡车司机和那些在封锁中被抓的人表示同情”。他呼吁官员们“迅速采取行动，以体现相互尊重的方式尽快缓解局势。
+相对于仇恨教育，我们缺少太多的勇敢教育。勇于担当，勇于探索，勇于挑战，勇于在错误中反思……仇恨让人狭隘而自私，勇敢让人包容而博爱！让我们多一些勇敢，少一些仇恨，中共灭了，未来一切都会慢慢变好！
 
-周二早，那里的交通几乎停止，直到下午晚些时候才开始缓慢恢复。安大略省警方表示，前往美国的交通“受限”。虽然加拿大边境管理局的网站显示大桥仍处于关闭状态，但仍有少量卡车朝着加拿大方向行驶。
-
-这座以装饰艺术为灵感的桥建于1929年。在当时美加约有四分之一的货物在桥上往来，它与底特律汽车工业的联系延续了几十年。其承载的贸易量几乎相当于美国与英国的总和。
-
-大桥建成时是世界上最长的悬索桥，被称为两国关系的贡品。这座桥的建造者还建造了金门大桥。 然而这座大使桥在金融危机开始数周后开幕，引发了一场漫长的跨境金融灾难。
-
-莫伦家族通过底特律国际桥梁公司于1979年收购了这座桥梁的控股权。莫伦于2020年去世。根据美国人口普查局数据的分析，去年前11个月，这座桥的贸易额为1307亿美元，由此产生了大量通行费。
-
-大桥的关闭无疑是迄今为止最具经济意义的抗议活动。一开始是对跨境卡车司机强制接种疫苗令的抗议，现在迅速演变成一场范围更广的运动，特鲁多迄今为止拒绝会见抗议者。“每个人都厌倦了新冠病毒，但这些抗议并不是度过难关的途径，”他周一晚上说。
-
-加拿大汽车制造商协会负责人布莱恩·金斯顿（Brian Kingston）周二在电话中表示：“大桥的关闭将对加拿大经济造成灾难性影响”。汽车行业已经遇到零部件短缺的情况。
-
-在疫情期间，被限制令困在家里的人们将购买力转向物质商品。所以供应链在创纪录的运输量的重压下嘎吱作响。我们的卡车司机们为了满足市场需求在超负荷的工作着。有些政治家们在议会中埋怨卡车司机却不面对正是他们的强制和限制令引发了这场席卷全球的运动。被特鲁多称为暴民的卡车司机是加拿大的草根，代表了基本的加拿大人的特性。正如一位退伍军人在视频上说的“军人在战场上可以是英雄，你们也是英雄”。
-
-[Source](https://www.bnnbloomberg.ca/how-blocking-one-bridge-shut-down-a-quarter-of-canada-u-s-trade-1.1720308)
+撰稿/发布：一叶知秋
 
  
 
