--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,159 +1,89 @@
 ---
-title: 疫苗不仅会伤害癌症免疫力，还会形成相对低效的免疫力
+title: 全球疫情更新（第三针的未来）
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1981600/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1981725/)
 
-[https://gtv.org/video/id=62041491585ecc15d73f7d41](https://gtv.org/video/id=62041491585ecc15d73f7d41)
+**整理/编辑：枳实**
 
-Dr. Harvey Risch (Professor of Epidemiology at Yale University)
-哈维·里施博士（耶鲁大学流行病学教授）
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-862.png)图片：雅典娜农场设计组 精灵蓝
 
-People who’ve had COVID and then get vaccinated
-感染过新冠病毒然后接种疫苗的人
 
-have lower levels of anti nucleocapsid antibodies
-具有较低水平的抗核衣壳抗体
+雅典娜疫情更新（2022年 2月9日）
 
-And this means that since the vaccines don’t address the nucleocapsid antigens
-这意味着由于疫苗不针对核衣壳抗原
+[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
 
-they only address the spike
-他们只解决刺突蛋白问题
+**一，全球疫情基本数据**
 
-It means that they’re doing something that’s damaging the immune response
-这意味着他们正在做一些破坏免疫反应的事情
+感染总数：397,363,280（日新增2,677,691人，14天增幅-23%）
 
-in a more general way than just what they do with a spike
-以更一般的方式，而不是他们对刺突蛋白所做的事情
+死亡总数：5,749,846（日新增10,900      人，14天增幅 +29%）
 
-And this is empirical data that public health UK has published
-这是英国公共卫生部门公布的经验数据
+**二，全球“疫苗”毒针统计数据**
 
-So we know that this is happening
-所以我们知道这正在发生
+“疫苗”毒针注射总数：103亿
 
-It’s not a theoretical issue about all the niceties of laboratory biology and neurology of things
-这不是关于实验室生物学和神经病学所有细节的理论问题
+完全“接种”：42.2亿人
 
-That could happen
-那可能会发生
+完全“接种”百分比：54.1%
 
-It’s a real thing that’s been really observed by their testing
-这是他们的测试真正观察到的真实事物
+**三，澳洲疫情和“疫苗”数据**
 
-Del Matthew Bigtree (American television and film producer)
-德尔·里马修·毕吹（美国电视和电影制片人）
+感染总数：2,811,482（今日新增31,064人）
 
-I mean, a lot of us known Dr. Harvey Risch, because he is you know
-我的意思是，我们很多人都认识哈维·里施博士，因为他就是你知道的
+死亡总数：4,373人（今日新增 70人）
 
-one of the go to’s on Fox News, but just want to show his CV
-他是经常在福克斯新闻上讨论热门话题的人之一，但只想展示他的简历
+每万人感染人数：1090.1839人
 
-I mean, this just when you look at this, folks
-我的意思是，当你看到这个的时候，伙计们
+“疫苗”毒针注射总数：51,590,445 （今日新增217,265   针）
 
-this thing is 73 pages long we could spend the rest of the day showing you how much
-这东西有73页长，我们可以用剩下的时间给你看
+完全“接种”：19,332,593人
 
-you know, Dr. Harvey Risch is achieved in his career
-你知道，哈维·里施博士在他的职业生涯中取得了成就
+第二针“接种”百分比：78.9%
 
-And so when we hear the pejorative thrown at you guys
-所以当我们听到对你们的贬义的时候
+16岁以上人口接种至少一剂疫苗的比例：&gt;95%
 
-you know that oh, they’re just extremist or fringe doctors
-你知道哦，“他们只是一些极端分子或边缘医生”
+16岁以上人口接种至少两剂疫苗的比例：93.8%
 
-You guys are some of the most mainstream doctors in the world as we know it
-正如我们所知，你们是世界上最主流的医生
+加强针总数：9,182,529（日新增：184,868针）
 
-So when he was saying when he’s talking about the immune system and nucleocap-sid
-所以当他谈到免疫系统时和核衣壳
+**四，第三针的未来**
 
-for layman’s, what does that mean?
-对于外行来说，这是什么意思？
+现在澳洲民众处在轰轰烈烈打第三针的阶段，第三针增长速度领先于很多国家。如下图各国每百人加强针注射数量曲线，绿色曲线为澳大利亚，其陡峭程度最大。加强针的效果如何，加强针接种水平远远大于澳洲的英国数据可以用来借鉴和预测。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/6-9.png)
+[下面这封信是英国民众通过信息自由法案获得](https://stevekirsch.substack.com/p/negative-vaccine-efficacy-example)的英国布莱普教学医院（Blackpool teaching Hospital）的住院患者中的疫苗接种统计数据。从信中的数据推算可知，住院病人中多达130/182 = 71%的患者是注射了加强针的病人。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/11-4.png)
+但英国布莱普地区的第三针接种率仅有44.9%，如下图所示。这71%和44.9%之间的巨大差距
+![](https://assets.gnews.org/wp-content/uploads/2022/02/12-7.png)
+英国布莱普地区的第三针接种率仅有44.9%，如下图所示。这71%和44.9%之间的巨大差距正说明了加强针注射不仅不能减轻病情，反而使得住院率几乎翻倍。 让我们看一下英国政府的数据：
+![](https://assets.gnews.org/wp-content/uploads/2022/02/14-1.png)
+如上图所示，今年1月份的数据，每十万人感染率各年龄组的对比，可以看到，18岁以上的各年龄组的感染率都是打2针及更多疫苗毒针的人有更高的感染率。
 
-Richard Urso, MD
-理查德·乌索，医学博士
+[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
 
-So So what what’s being thrown at us is, again, the Superman super immunity
-那么，再次扔给我们的是什么？是超人？超级的免疫力？
+数据来源：
 
-So if you get the virus and then you get the vaccine
-所以如果你感染了病毒，然后你接种了疫苗
+[谷歌](https://www.google.com/search?q=covid+case&amp;rlz=1C1ONGR_en-GBAU960AU960&amp;oq=covid+case&amp;aqs=chrome..69i57j69i59j0i402l2j0i131i433i512j0i20i131i263i433i512j0i131i433i512j69i60.1435j0j4&amp;sourceid=chrome&amp;ie=UTF-8)
 
-you’ll have super immunity
-你就会拥有超强免疫力
+[Our world in data](https://ourworldindata.org/coronavirus-data)
 
-No, you don’t, and he points that out
-不，你没有，他指出了这一点
+[澳大利亚卫生部网站中共病毒疫苗统计](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/numbers-statistics)
 
-And there’s a couple of scary things
-还有一些可怕的事情
+[澳洲TGA每周疫苗不良反应报告](https://www.tga.gov.au/covid-19-vaccine-safety-monitoring-and-reporting)
 
-Not only do you not get super immunity
-不仅没有超强免疫力
+[covidlive.com.au](https://covidlive.com.au/)
 
-but you get attack on p53 and BRCA genes
-但是你会受到p53和BRCA基因的攻击
+[Booster shot gap to be slashed to four months and then down to three](https://www.news.com.au/lifestyle/health/health-problems/booster-shot-period-to-be-slashed-to-four-and-three-months-as-omicron-fight-ramps-up/news-story/005b2aabba44f2e2b72dac7aa019611d)
 
-These are your mutation suppressor genes are called tumor suppressor genes
-这些是你的突变抑制基因被称为肿瘤抑制基因
+[Coronavirus World Map](https://www.nytimes.com/interactive/2021/world/covid-cases.html)
 
-These have been attacked by the spike protein
-这些已被刺突蛋白攻击
+发布：tianzhihuan
 
-The paper was cited I cited it on on after Harvey finished talking
-哈维说完之后我引用了这篇论文
-
-Yeah
-是呀
-
-Richard Urso
-理查德·乌
-
-the other thing that’s happening
-正在发生的另一件事
-
-the toll-like receptor 7/8 are getting attacked
-toll-like受体 7/8 受到攻击
-
-That is important for T cell surveillance and your immune system
-这对T细胞监测和免疫系统很重要
-
-That’s not a good thing for your for the spike protein is doing that after the vac-cinations
-这对你来说不是一件好事，因为刺突蛋白在接种疫苗后会这样做
-
-So what he’s there what he’s addressing is not only his natural immunity denial ri-diculous
-因此，他在那里所讨论的不仅是他的自然免疫力被否定的荒谬问题
-but to say we have super immunity
-而且说我们有超强免疫力
-
-It’s actually in some cases the antibody production is going also in a way towards the spike
-实际上，在某些情况下，抗体的产生也在朝着刺突蛋白的方向发展
-
-rather than the nucleocapsid which is more superior immunity
-而不是核衣壳，而核衣壳的免疫力更优越
-
-Date:02/06/2022
-原视频标题: Vaccines not only hurt cancer immunity, but also form relatively inefficient immunity
-疫苗不仅会伤害癌症免疫力，还会形成相对低效的免疫力
-原视频日期：2022/02/08
-原视频链接:https://gettr.com/post/psmk0gaadf
-任务编号：KE391（3698）
-视频时间段 : 0:00-2:14
-
-英听校: 洛杉矶盘古农场 – Layka
-翻译: 洛杉矶盘古农场 – Layka
-翻译终校：洛杉矶盘古农场 – Mike Li
-字幕+视频制作：洛杉矶盘古农场-天涯行
-审片：洛杉矶盘古农场-银龙
-发布：洛杉矶盘古农场 – 彩虹 Rainbow
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+**更多资讯，请关注：****
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
