--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,33 +1,33 @@
 ---
-title: 【秘翻在线】拜登政府面临着取消口罩规定的压力
+title: “军人在战场上可以是英雄，你们也是英雄”
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1981506/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1981653/)
 
-**撰稿：Grace**
+#### 编译： Cran
 
-**校对：Grace**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-07-at-3.47.40-PM-1.jpeg)图片来源：bronx.news 12
-据《每日邮报》2月9日报道，在民主党领导的四个州本周早些时候开始取消口罩限制后，拜登政府面临着取消口罩规定的压力。
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/16444481951.png)
+Image source: CTV.ca
 
-据报道，加利福尼亚州、康涅狄格州、特拉华州、新泽西州和俄勒冈州的民主党州长周一都宣布计划取消室内和/或学校的口罩规定。
+大使(Ambassador) 桥是一座连结底特律,密歇根州（Detroit, Michigan）和温莎, 安大略省（Windsor，Ontario）横跨美加的最大桥梁，是北美的一条主要的经济动脉。短暂的关闭就马上暴露出其供应链的脆弱性。那曾是卡车司机们熟悉的赖以生存的桥梁，但为了生存和加拿大的未来，他们不得不暂时的关闭它。
 
-加州(California)州长加文·纽森(Gavin Newsom)宣布，该州将在下周取消对接种疫苗者的室内口罩规定。
+同时浮出水面的是这座桥的拥有者，马特 ·莫伦（Matt Moroun）家族。它与加拿大政府持续了长达数年的斗争。莫伦家族在一份声明中说，贸易需要恢复，他的家庭对“卡车司机和那些在封锁中被抓的人表示同情”。他呼吁官员们“迅速采取行动，以体现相互尊重的方式尽快缓解局势。
 
-康涅狄格州(Connecticut)州长内德·拉蒙特(Ned Lamont)说，学校和托儿所的全州口罩规定将于2月28日结束。
+周二早，那里的交通几乎停止，直到下午晚些时候才开始缓慢恢复。安大略省警方表示，前往美国的交通“受限”。虽然加拿大边境管理局的网站显示大桥仍处于关闭状态，但仍有少量卡车朝着加拿大方向行驶。
 
-特拉华州(Delaware)州长约翰·卡尼(John Carney)宣布，普遍的室内口罩规定将于周五结束，学校的规定将于3月31日到期。
+这座以装饰艺术为灵感的桥建于1929年。在当时美加约有四分之一的货物在桥上往来，它与底特律汽车工业的联系延续了几十年。其承载的贸易量几乎相当于美国与英国的总和。
 
-新泽西州(New Jersey)州长菲尔·墨菲(Phil Murphy)说，他将在3月7日取消全州范围内的在校学生的口罩命令。
+大桥建成时是世界上最长的悬索桥，被称为两国关系的贡品。这座桥的建造者还建造了金门大桥。 然而这座大使桥在金融危机开始数周后开幕，引发了一场漫长的跨境金融灾难。
 
-俄勒冈州（Oregon）州长凯特·布朗(Kate Brown)说，她的州的室内和学校范围的口罩规定将于3月31日结束。
+莫伦家族通过底特律国际桥梁公司于1979年收购了这座桥梁的控股权。莫伦于2020年去世。根据美国人口普查局数据的分析，去年前11个月，这座桥的贸易额为1307亿美元，由此产生了大量通行费。
 
-白宫新闻秘书珍·普萨基(Jen Psaki)周二说: “我们希望各州的领导人会看一看关于正在发生的事情的科学和数据。他们将对当地学区做出决定。”
+大桥的关闭无疑是迄今为止最具经济意义的抗议活动。一开始是对跨境卡车司机强制接种疫苗令的抗议，现在迅速演变成一场范围更广的运动，特鲁多迄今为止拒绝会见抗议者。“每个人都厌倦了新冠病毒，但这些抗议并不是度过难关的途径，”他周一晚上说。
 
-报道称，美国的中共病毒Covid-19病例在过去七天里下降了43%，每天记录267,765例，低于一周前的469,770例。
+加拿大汽车制造商协会负责人布莱恩·金斯顿（Brian Kingston）周二在电话中表示：“大桥的关闭将对加拿大经济造成灾难性影响”。汽车行业已经遇到零部件短缺的情况。
 
-**新闻来源：[Biden Under Pressure to End Mandates as Dem States Lift Restrictions](https://www.newsmax.com/politics/covid-19-mandates-masks-biden/2022/02/08/id/1056045/)**
+在疫情期间，被限制令困在家里的人们将购买力转向物质商品。所以供应链在创纪录的运输量的重压下嘎吱作响。我们的卡车司机们为了满足市场需求在超负荷的工作着。有些政治家们在议会中埋怨卡车司机却不面对正是他们的强制和限制令引发了这场席卷全球的运动。被特鲁多称为暴民的卡车司机是加拿大的草根，代表了基本的加拿大人的特性。正如一位退伍军人在视频上说的“军人在战场上可以是英雄，你们也是英雄”。
 
-[Biden v the blue states: Psaki says it is up to school districts to decide mask mandates and there are leaders STOPPING them after four Democrat governors dropped classroom rules](https://www.dailymail.co.uk/news/article-10489735/Biden-urged-roll-COVID-restrictions-FOUR-Dem-governors-announced-end-school-masking.html)
+[Source](https://www.bnnbloomberg.ca/how-blocking-one-bridge-shut-down-a-quarter-of-canada-u-s-trade-1.1720308)
 
  
 
