--- a/gnews/44.md
+++ b/gnews/44.md
@@ -1,43 +1,55 @@
 ---
-title: 2/9/2022 国际财经快讯：穆迪认为日本需要 &#8220;更可信的 &#8220;预算平衡目标；脸书和Instagram成为假冒路易威登、古驰和香奈儿的热门网站
+title: 2022年2月9日郭先生大直播 文字同步精要
 ---
-`秘密翻译组金融团队` [轉載自GNews](https://gnews.org/zh-hans/1979736/)
+`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/1980124/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/20220209-2-1.jpg)[图片来源](https://www.oann.com/japan-needs-more-credible-budget-balancing-target-moodys/)
-**1.穆迪认为日本需要 “更可信的 “预算平衡目标**
+战友们好，郭先生和全球亿万战友们继续大直播!
 
-[横滨/东京（路透社）–评级机构穆迪投资者服务公司的一位官员周三表示，日本需要一个比2025财政年度更 “可信 “的目标日期，以实现基本预算平衡。该机构主权风险组的高级副总裁克里斯蒂安-德-古兹曼(Christian de Guzman)还表示，一旦取消中共病毒的限制，并且对重新开放经济和国际边界有更大的信心，日本家庭就会处于良好的消费状态。上个月，日本坚持其2025年财政目标，以实现基本预算平衡，即使在过去两年推出大规模支出以缓和中共病毒大流行带来的社会和经济打击之后。”德古兹曼在新加坡接受在线采访时告诉路透社：”为了实现某种形式的实质性财政整顿和资产负债表修复，确实需要有一个更可信的目标，并采取必要的行动加以支持。](https://www.oann.com/japan-needs-more-credible-budget-balancing-target-moodys/)
+1、共产党冬奥会的人造冰、人造雪。现场的德国女士朋友反馈，完全低估了共产党可耻可恨。现场吃的最好的是汉堡包，但可能是老鼠肉做的所谓兔头汉堡包。中共造假已经不只是以假乱真，是以假为真，这是中东和普京共同的感受。中共一切都是假的。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/88c6d976-0150-4a23-b194-70edbbf6d058.jpg)
+2、日本人创造性玩具设备，性犯罪率低；中共使用铁链子，把女性当性玩具。
 
-**2.德国汽车市场2022年将增长7%，仍低于大流行前的水平**
+3、彭帅被6-7台车挟持，“保护”达到常委级别，利用外国记者告诉世界被退休。
 
-[柏林（路透社）–德国汽车协会（VDA）周三表示，德国汽车市场在2022年预计将增长7%，达到280万辆新车，比去年的历史最低点有所改善，但仍低于大流行前的水平。该协会说，在全球范围内，该协会预计今年的市场将增长4%，其中欧洲将增长5%，因为欧洲从大流行病中恢复的速度比美国或中国慢。去年，德国的汽车注册数量是该国统一以来最低的，为260万辆，比2020年已经疲软的数字下降了10%。该协会表示，德国现在必须优先创建必要的基础设施，以支持道路上越来越多的电动汽车，从促进半导体生产到建设更多的充电站。”现在的重点是基础设施和框架条件。VDA主席Hildegard Mueller在一份声明中说：”这些是行业扭转商定目标的决定性因素。](https://www.oann.com/german-car-market-to-grow-7-in-2022-still-below-pre-pandemic-vda/)
+4、中俄关系，双方都在争分多秒拿自己的利益。8年前习近平和普京的交易，迫使普京参加了开幕式，普京挣了1000多亿迅速走人。欧盟认为犯了重大的错误，让俄罗斯靠近了中共。普京认为该回到欧洲了，一定会把中共卖掉。马克龙去俄罗斯见普京，不打乌克兰，可以谈天然气管道建设和购买。欧洲版的竞争方案马上出笼，全球自动灭共。
 
-**3.Pictet集团资产增长15%，2021年创历史新高**
+5、现场俄罗斯染病1几个人，死了3个人，惹怒普京。中共把中国人民的利益，全部压在了完全胡扯的中俄两国领导人关系上，而中国人还不浑然不知。中俄两国领导人玩，把中国人民绑上战车，最终牺牲的是中国老百姓。
 
-[苏黎世（路透社）–这家瑞士财富和资产管理公司周三表示，在市场强劲和新资金净流入超过290亿法郎的情况下，皮克泰集团去年管理或托管的资产增长了15%，达到创纪录的6980亿瑞士法郎（7554.9亿美元）。这个总部位于日内瓦的集团的营业收入增长了13%，达到32.5亿，而净利润猛增75%，达到10.1亿，其中包括出售和回租其在日内瓦的主要建筑所带来的特殊收益。不包括这一一次性收益的经营业绩上升33%，达到9.24亿。高级管理合伙人Renaud de Planta称2021年是优秀的一年，因为市场条件非常积极，资产达到历史最高水平。”我们受益于我们明确的重点，为我们的客户带来投资领导力和定制服务。他在一份声明中说：”这一承诺将在2022年继续，在人才和技术方面的投资创下新高。](https://www.oann.com/pictet-groups-assets-rise-15-to-record-high-in-2021/)
+6、冬奥会没有看到沙特王子，无人报道！冬奥会中共继续妓女外交，愿意购买美国4000亿美元东西，开放沈阳大使馆，创造中美关系回暖。沈阳大使来回飞一趟赚取中国人5000亿血汗钱。郭先生说过不断不交，美国会玩死中共。
 
-**4.阿布扎比加密货币公司Hayvn正在进行B轮融资谈判，考虑进行IPO**
+7、灭共是人类万年来最难的事，战友必须有清醒的认识。灭共不是我们的责任，但我们必须灭共。世界上没有人敢想不流血灭掉共产党，灭共是地球上没有人可以完成的事。但是新中国联邦，爆料革命几乎做到了，而且一定会完成。
 
-[路透社迪拜2月9日电–总部位于阿布扎比的加密货币交易公司Hayvn的首席执行官表示，该公司正在与机构投资者进行谈判，以启动B轮融资，其价值将达到4亿美元，因为它关注最终的首次公开发行（IPO）。首席执行官Christopher Flinos告诉路透社，Hayvn在2021年的A轮融资中筹集了500万美元，希望在B轮融资中筹集3000万美元，预计将在大约三个月内完成。加密货币进入主流的步伐已经加快，大型银行和公司开始接受它。行业支持者希望这将减少数字货币价格的波动。A轮融资通常为早期发展计划提供现金保障，随后是B轮融资，为进一步扩张提供资金。](https://www.reuters.com/markets/europe/abu-dhabi-crypto-firm-hayvn-talks-series-b-funding-eyes-ipo-2022-02-09/)
+8、疫苗危机最新情况：什么样的灾难和疫苗灾难相比，都不算灾难。小土豆失心疯了，加拿大一定非常惨。郭先生爱加拿大，上天给了这么美的地方，喜欢多伦多的冷，雪。很不幸，加拿大被共产党渗透，需要一场运动觉醒。以色列在觉醒，可是还有很多小国家的疫苗灾难都无人报道。
 
-**5.脸书和Instagram成为假冒路易威登、古驰和香奈儿的热门网站**
+9、全世界媒体都在严肃地扯淡，让人打疫苗，这就是共产党亲爹亲妈造出来的，一本正经造假。
 
-[纽约/米兰，2月9日（路透社）–根据研究和采访，Facebook的所有者Meta Platforms（FB.O）正在努力阻止造假者在其社交媒体应用程序上推送从古驰到香奈儿的假货，因为该公司正在大力发展电子商务。根据对学者、行业团体和打假调查人员的采访，该公司的平台已经成为造假者的热点，他们利用其一系列的社交和私人信息工具来接触用户。”Facebook和Instagram是假货被卖给公众的关键市场。10年前是eBay，5年前是Amazon，”Kroll公司的总经理本尼迪克特-汉密尔顿（Benedict Hamilton）说，这家私人调查公司受雇于受假冒和走私伤害的品牌。](https://www.reuters.com/technology/facebook-instagram-are-hot-spots-fake-louis-vuitton-gucci-chanel-2022-02-09/)
+10、新加坡战友被东北老婆睡觉时候偷偷打疫苗，大便失禁，嘴歪。老婆不认账，还说打太少，应该再打几针。甘肃，东北，广西，无知还胆大的人该觉醒了。只要没有打疫苗就是天下最大的赢家。
 
-**6.联邦银行新任行长称欧洲央行可能在2022年加息**
+11、郭先生突然一声“Ye”好消息！ 对付黑暗沼泽地第一仗！美国对付UBS50年才会撬开裂缝。人类财富100万亿美元黑账， 罗斯柴尔德家族在UBS只排第三。全世界没有人敢告，郭先生告UBS正式在伦敦立案！UBS是唯一一个共产党批准金融牌照的海外银行。拿下UBS，共产党半个财富帝国被拿下。UBS数据大门一定会打开，爆料革命和七哥人生，进入 新的阶段！
 
-[法兰克福，2月9日（路透社）–德国央行行长Joachim Nagel周三告诉德国报纸Die Zeit，欧洲央行可能在今年加息，因为高通胀率被证明比曾经想象的更持久。欧洲央行上周放弃了在2022年不加息的承诺，但在市场迅速将其存款利率在12月恢复到零的两项举措定价后，欧洲央行也试图缓和预期。今年1月接手德国央行的纳格尔在接受采访时表示，在政策正常化方面行动太晚可能会付出特别大的代价，他维持了德国央行历史上的保守路线。”纳格尔告诉《时代周刊》：”如果3月份的（通胀）情况保持不变，我将赞成货币政策正常化。”第一步是在2022年期间停止净资产购买。然后，在今年结束之前就可以提高利率。”](https://www.reuters.com/business/finance/ecb-could-raise-rates-2022-new-bundesbank-chief-says-2022-02-09/)
+12、UBS瑞银是阿里巴巴的秘密神洞，100万亿美元。这个案子和单伟建的案子拿下，郭先生的目的不在钱，爆料革命会拿到最重要的数据。
 
-**7.邦吉公司季度利润增长17%，因农业综合企业的发展而增长**
+13、今天3件大事！打开中共藏匿在UBS的财富，揭露和中共勾兑的沼泽地；更换战场直接接触式灭共；一无所有全身心灭共。
 
-[2月9日（路透社）–全球农产品贸易商Bunge Ltd（BG.N）周三报告称，第四季度调整后的利润增长了17.1%，这得益于其核心农业业务以及精炼油和特种油业务的强劲表现。邦吉的业绩提供了跨国粮食公司如何经受需求变化和中共病毒大流行病造成的供应链中断的最新情况。Bunge和竞争对手Archer-Daniels-Midland Co（ADM.N）、Cargill Inc（CARG.UL）和Louis Dreyfus Co（AKIRAU.UL）–被称为ABCD四家粮食贸易巨头–目前正受益于粮食和可再生燃料需求的改善，因为一些中共病毒大流行病限制正在缓解。邦吉预计2022年调整后的每股收益至少为9.50美元，该公司称这将是其近期历史上第二高的经营业绩。](https://www.reuters.com/business/bunge-reports-17-rise-fourth-quarter-profit-2022-02-09/)
+14、七哥不要一分钱，要找回中国人失去的70年财富。这个需要一个仪式，改天再宣布。七哥不在美国生活了！伦敦或者日本！今年去伦敦是为了UBS的案子。而日本是对中共24小时作战，亚洲唯一安全的地方，让中国每个角落都可以直接听到七哥的声音。在这之前七哥必须变到一无所有！
 
-**8.博世首席执行官预计下半年芯片短缺问题将明显缓解**
+15、七哥会在美国，伦敦，日本三地跑，在伦敦会待一半时间， 日本会待2-3个月。东京有3个基地，一年前买了日本最高雅的会所，价值1.5亿美元；还有一个山上最高级的日本木屋野菜餐厅；日本京都的一个家族老庙，精神双休的地方。要来美国的战友们不要改变计划。新西兰，澳大利亚，南半球最重要的基地。解放后的德国会重要。但是最终总部会在 美国。七哥会在伦敦战斗，2025年前，拿回盗国贼偷走中国人的钱。
 
-[柏林，2月9日（路透社）–博世首席执行官Stefan Hartung在周四的新闻发布会上说，他预计今年下半年芯片短缺将明显缓解，并补充说他希望到2023年企业可以正常运营。这家世界上最大的汽车供应商，也制造家居用品和能源系统等产品，在初步数据中报告说，其2021年的收入超过了大流行前的水平，总额为788亿欧元（900亿美元）。其EBIT利润率为4%，高于一年前的2.8%。但其移动解决方案部门，包括为博世带来大部分收入的汽车零部件部门，增长较弱，部分原因是缺乏芯片。”去年我们非常清楚地感觉到，我们没有足够的芯片来满足需求，”Hartung说。”这在2022年将变得更好，在下半年明显如此。希望在2023年我们能以我们想要的速度工作。”](https://www.reuters.com/technology/bosch-ceo-expects-chip-shortage-ease-significantly-second-half-2022-02-09/)
+16、共产党控制人民：一是媒体管制，控制历史和未来，一切它说了算。二是，不能个人财富神圣不可侵犯，控制财富，这样每个人就不可能独立。财富不能共有，权力不能私有。而共产党逆天下而行。GTV，GETTR打破共产党的媒体管制，Hpay打破了共产党的财富垄断。
 
-By 【秘密翻译组-金融法律组】
-作者：千年等一回
+17、 PAG拿走了美国老人的。UBS和PAG的官司，首先就会问：为啥把郭文贵的财富卖给了这几个基金，为什么20秒就找到了买家，股票为啥跑到共产党手里？
+
+18、这个案件意义不仅是UBS，揪出了事实上背后第一大股东的共产党福建省政府。
+
+19、关于七哥到伦敦的安全问题。共产党要想杀人，即使躲在白宫也能做到，它可以买通各种美国人。但是这么做除了成就英雄外，只能导致共产党更快死亡。在英国，日本，美国，安保级别都是一样的，都是与各国政府安排好的。日本是最积极的，已经评估：1）共产党一定会和美国一样，发动各种诉讼战；2）准备好各种造谣。3）各种外交施压。日本和美国有协议，实际上还是美国政府保护。
+
+20、任何理由，父母让孩子打疫苗就是谋杀。战友还在考虑外部压力，未来一定后悔，坚持就是胜利。
+
+21、UBS案件看不到的压力：1）英国的政治压力；2）很多突然的变数，一系列的舆论战。百万亿的钱，共产党会不惜一切代价保护；3）教父级别的黑白道威胁抹黑，黑暗势力的总部，前面没有人敢告UBS，在瑞士告UBS相当于告空气。政治、媒体、经济，共产党最后的疯狂会很可怕。
+
+以上大直播文字精要，由新西兰农场焦点组提供。最终内容请以郭先生大直播视频为准。
+
+文案提供：梦田
 
  
 
