--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,14 +1,11 @@
 ---
-title: 《我是音雄》赐予新中国联邦人自信和力量（三）
+title: 东京成田机场2021年国际旅客数量创新低
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981932/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981970/)
 
-文编：东京樱花团/樱花传媒
-视频:东京樱花团/中文小视频组
-
-1月5日，郭文贵先生在GTV大直播透露，美国和欧洲的很多人，是通过听了文贵先生唱的歌，才对文贵先生有了初步了解。《我是音雄》每时每刻都影响着中国人在海外的安全，音乐是跨越种族和国界的语言，它给我们带来无限的美好。
-
-*编辑、发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/20220210-scaled.jpg)
+*编辑：东京樱花团/简报小组
+发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
