--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,12 +1,12 @@
 ---
-title: 不允许以新中国联邦的名义参加任何国家的抗议和政治活动
+title: 古今司马懿刘亚洲西颦东效（下）
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981897/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981955/)
 
 文编：东京樱花团/樱花传媒
 视频:东京樱花团/中文小视频组
 
-2月6日，郭文贵先生在GTV大直播透露，大规模大卡车抗议运动最终会引发政治冲突，甚至有可能被认定为暴动。所以在此郭先生郑重指出，未经允许，决不能以新中国联邦名义参加任何国家的抗议和政治运动，不可以使用GTV直播。擅自行为会被中共所利用，中共会借此攻击新中国联邦，会给战友们带来巨大伤害。
+1月5日，郭文贵先生在GTV大直播透露，刘亚洲想学司马懿，但是不得要领。司马懿永远不会暴露出自己的目的，永远掩盖自己的真实想法。而刘亚洲一直躺在自己是李先念女婿的功劳本上，为达目的，谎话连篇，才华和思想限制了其未来走向，一生不得志。
 
 *编辑、发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
