--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,34 +1,40 @@
 ---
-title: 朗诵佳作欣赏《匆匆》
+title: 单伟建用虚假无担保票据大肆攫金
 ---
-`喜马拉雅纽约磐石农场` [轉載自GNews](https://gnews.org/zh-hans/1981842/)
+`加拿大温哥华扬帆农场 Himalaya Sailing Farm (CA)` [轉載自GNews](https://gnews.org/zh-hans/1981874/)
 
-视频编辑：Jenny / 字幕：文朗
-[朱自清的散文《匆匆》写于1922年3月](https://baike.baidu.com/item/%E5%8C%86%E5%8C%86/1577840)，恰逢“五四”运动落潮期。当时的“五四”知识青年忙于救国，忙于追求进步；他们备受当时政治环境的压迫，却没有停止追求进步的脚步；他们苦恼，彷徨，却在冷静的沉思后，继续追赶人生的路。
+加拿大温哥华扬帆农场 薇文viven
 
-**历史又在重演，一百年过去了，五四青年换成了新中国联邦人，换做遍布在五湖四海全球各地的“你我他她”，这一次是在文贵先生的带领下，不变的主题依然是要替中国人民追求“民主，法制和自由”，这就是我们的使命！不但誓将共产党送进地狱，同时也要与全世界的黑暗势力作斗争，传播病毒疫苗真相。多少屈辱与不公，但是挡不住我们追求正道主义，重建中华文明的决心。**
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/a-7-edited.png)图片来源：asia times
 
-*朱自清《给俞平伯的信》一文中写到：“生活中的各种过程都有它独立的意义和价值——每一刹那有它的意义与价值!每一刹那在持续的时间里，有它相当的位置。”*
 
-《匆匆》全文：
+单伟建用虚假的担保票据，从 “PAG 太盟集团”攫取资金，倒手到自己名下的上市公司。
 
-燕子去了，有再来的时候；杨柳枯了，有再青的时候；桃花谢了，有再开的时候。但是，聪明的，你告诉我，我们的日子为什么一去不复返呢？- – 是有人偷了他们罢：那是谁？又藏在何处呢？是他们自己逃走了罢：现在又到了哪里呢？
+单伟建 2021年4月在开曼群岛注册成立了一家名为“戈壁收购”的空壳公司，随即在纳斯达克上市。承销商三家：花旗银行 (Citibank)、高盛亚洲 (Goldman Sachs (Asia) L.L.C. ) 和瑞银投资 (UBS Investment Bank) 。
 
-我不知道他们给了我多少日子；但我的手确乎是渐渐空虚了。在默默里算着，八千多日子已经从我手中溜去；像针尖上一滴水滴在大海里，我的日子滴在时间的流里，没有声音，也没有影子。我不禁头涔涔而泪潸潸了。
+上市后共募集资金约$2.87亿美元，其中包括三大承销商超额配售的 $542.5万美元，全部进入单伟建的私人信托账户，委托美国新成立的“大陆股票转让&信托公司” (Continental Stock Transfer & Trust Company)进行管理，没留一分钱给“戈壁收购”。“戈壁收购”如何维持经营?
 
-去的尽管去了，来的尽管来着；去来的中间，又怎样地匆匆呢？早上我起来的时候，小屋里射进两三方斜斜的太阳。太阳他有脚啊，轻轻悄悄地挪移了；我也茫茫然跟着旋转。于是洗手的时候，日子从水盆里过去；吃饭的时候，日子从饭碗里过去；默默时，便从凝然的双眼前过去。我觉察他去的匆匆了，伸出手遮挽时，他又从遮挽着的手边过去，天黑时，我躺在床上，他便伶伶俐俐地从我身上跨过，从我脚边飞去了。等我睁开眼和太阳再见，这算又溜走了一日。我掩着面叹息。但是新来的日子的影儿又开始在叹息里闪过了。
+1、“戈壁收购” 发行 “无担保票据” 给 PAG 太盟集团，立即套现 $100万美元，支付管理人员薪酬。这一票据无利息，若“戈壁收购”在两年内无法实现借壳上市的发行目的，则无需偿还欠款， “太盟集团”将全部免除其债务。
 
-在逃去如飞的日子里，在千门万户的世界里的我能做些什么呢？只有徘徊罢了，只有匆匆罢了；在八千多日的匆匆里，除徘徊外，又剩些什么呢？过去的日子如轻烟，被微风吹散了，如薄雾，被初阳蒸融了；我留着些什么痕迹呢？我何曾留着像游丝样的痕迹呢？我赤裸裸来到这世界，转眼间也将赤裸裸的回去罢？但不能平的，为什么偏要白白走这一遭啊？
+2，”戈壁收购“向“太盟集团”出售10,851份 “私募认股权证” ，为公司带来了10.85万美元的进账，作为公司维护费用。
 
-你聪明的，告诉我，我们的日子为什么一去不复返呢？
+“PAG 太盟集团” 将这些债务以“内保外贷”形式，通过国内金融机构，转嫁到中国老百姓身上。此外 “PAG 太盟集团” 还从投资国内各行业获得巨额利益。
 
-朗诵：文朗
+郭文贵先生揭露盗国贼们玩巨额的虚假票据游戏，这只是九牛一毛。每个中国百姓身上都插着抽血管，财富被多重抽吸，通过无数像“戈壁收购”这样的公司，流入这些盗国贼家的私人信托账户，背上的是子子孙孙还不完的沉重债务。
 
-撰稿/视频制作：Jenny
+不灭中共，天理难容！
 
-配乐/字幕：文朗
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GTV.jpg)磐石农场Discord![](https://assets.gnews.org/wp-content/uploads/2022/01/GTV.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/b3df4b36-df11-4361-a8f5-6c7e5f9da569.jpg)
+参考资料：
 
+[https://www.sec.gov/Archives/edgar/data/0001854593/000110465921047559/filename1.htm](https://www.sec.gov/Archives/edgar/data/0001854593/000110465921047559/filename1.htm)
+
+[https://www.sec.gov/Archives/edgar/data/1854593/000110465921093691/tm2122403d1\_8k.htm](https://www.sec.gov/Archives/edgar/data/1854593/000110465921093691/tm2122403d1_8k.htm)
+
+[INVESTMENT MANAGEMENT TRUST AGREEMENT](https://contracts.justia.com/companies/gobi-acquisition-corp-13143/contract/186384/)
+
+* * *
+
+编译撰稿：薇文viven 编辑发稿：硫酸羟氯喹64
 
  
 
