--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,17 +1,23 @@
 ---
-title: 【粤语配音】2022年2月9日：至关重要的三件大事
+title: 徐州八孩母亲事件再看中共的邪恶本性
 ---
-`MOS香港部` [轉載自GNews](https://gnews.org/zh-hans/1982055/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1982110/)
 
-紐約香草山-香港部
+撰稿：北纬农夫
 
-所以今天有三件大事，第一，我们第一次打开了沼泽地，真正的在法庭上公开较量，找回中国人在西方，被共产党藏匿的财富，第一道大门打开了。
+近日，各大国际媒体相继报道了徐州八孩母亲的生活惨状，世界上和平善良的人们难以置信这样的情况发生在世界第二大经济体的中国。北京正直冬奥会期间，这件人间惨剧被民间和国际媒体竞相报道，但中共官媒除两次充满谎言的官方通报外，一片沉寂。当地警方甚至以坐牢威胁前去探望的志愿者，这一切再一次以铁的事实揭露了共产党以假治国、以黑治国、以贪治国的邪恶本质！把好话说尽，把坏事干绝，这描绘共产党在中国的非法统治再适合不过！
 
-这是一个，第二个七哥宣布，七哥将离开美国到伦敦和日本生活，直接面对共产党，从现在的美国以美灭共、以共灭共，长距离灭共，直接接触，这是第二个宣布。
+首先，让我们看看习近平2021年在纪念世界第四届妇女大会上的发言：“要把保障妇女权益必须上升为国家意志，我们要扫清障碍、营造环境，最大限度调动广大妇女积极性、主动性、创造性，增强她们的获得感、幸福感、安全感。我们要充分发挥政府作用，广泛调动社会力量，支持和帮助妇女享有出彩的人生。”
 
-第三个七哥将在法律上申请，变得一无所有，做好一切最坏的事情发生，万一共产党弄个导弹导到日本去呢，万一给我下毒，毒死我呢是吧？，所以我都会准备好，然后我会让这些76个案子的缠诉，我让他们彻彻底底到另外一个阶段去。
+多么熟悉的字眼、多么庄严的承诺、七十年来一次比一次说得好！保护妇女上升为国家意志、推动妇女走在时代前列、支持和帮助妇女享有出彩的人生！中共统治下的妇女是怎样出彩的人生呢？战争年代，共产党往往将妇女儿童置于最危险的境地，无数个江姐、刘胡兰、小兵张嘎、王二小都是他们树立的榜样，引导鼓励妇女儿童去牺牲！共产党执政后，无论是位高权重的王光美、丁玲等共产党体系里的光鲜人物，还是遥远乡村的悲情母亲杨改兰、徐州八孩母亲，都无法逃脱共产党治下的悲惨命运！
 
-所以说兄弟姐妹们，这是第三个大事，因为今天法律程序没完，我在等着，等着今天PAG关于那天的开庭，初二的开庭结果出来，然后我的法律程序再进行完，就开始对PAG真正的全面作战全面开始，让这些片PAG所有案子的揭开，对美国司法的腐败，对美国黑暗控制、黑金的一个全面的，对西方的蓝金黄的一个大战，揭露的开始。
+让我们再看看习近平的夫人彭丽媛，联合国亲善大使、联合国教科文组织促进女童和妇女教育特使在2021年7月上合组织妇女教育与减贫论坛上的演讲：“经过不懈努力，中国取得脱贫攻坚全面胜利，中国亿万妇女彻底摆脱了贫困。我们要聚爱成行，久久为功，持续深化妇女教育与减贫合作，让教育之光照亮妇女希望之路，让更多妇女享有人生出彩的机会。”
+
+各位，你看到了吗？又是出彩！中国亿万妇女彻底摆脱了贫困！她们摆脱了什么？她们衣不蔽体、食不果腹，她们没有名字、没有自由，她们没有牙齿、没有灵魂，她们至今还带着沉重的锁链！中共统治以来，在中国这片知礼义廉耻的的土地上，妇女从来就没有获得过真正的自由、尊严！她们就是我们的兄弟姐妹、母亲妻女！
+
+这就是当下共产党治理下的中国，所有说的一切都是虚假的，所有做的一切都是邪恶的！我们一定要记住这些共产党统治下忍辱负重、甚至惨死的中华女性,她们有 “自由无价，生命有涯，宁为玉碎，以殉中华”的北大学生林昭、坚持真理的人大才女张志新、40多年苦苦找寻真相的天安门母亲们、陪叔叔睡觉的红黄蓝幼儿园呀呀学童、山东大学服务黑人的女大学生、大街上被暴力执法的母亲们、计划生育政策下被非人对待的母亲和抛弃的婴儿们、维权路上那些弱不禁风的瘦弱身影……
+
+郭文贵先生曾经提议，未来新中国联邦将中共那个所谓的‘中国人民英雄纪念碑’改为‘中华英雄母亲纪念碑’，让我们永远缅怀这些英雄的母亲，捍卫她们的尊严、完成她们的寄托，将自由带回中华这片我们永远守护的土地！
 
  
 
