--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,17 +1,85 @@
 ---
-title: 忘掉痛苦，不懂感恩！必有更大的灾难！
+title: 中国人噩梦的开始，国人奴性的根源 ——《驭民五术》
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/1981767/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1981802/)
 
-北京时间2月9日晚，在文贵先生的直播中提到一个善于遗忘，忘掉痛苦与灾难，而内心不懂感恩的民族，未来必定会有更大的灾难在等着你！
+作者：纽约香草山教育部 – 蒙古鸿雁
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
+中国第一本禁书是两千多年前先秦的商鞅撰写的《商君书》。
 
-在中共统治下，太多的中国人总是那么的善于遗忘，无法铭记苦难不去深思。正如文贵先生所说，车祸一星期忘掉，六四天安门事件三星期忘掉，香港万人被奸被杀不超过三个月忘掉，郑州水灾不超过半年忘掉……
+在这本书中，始终强调朝廷是与民众对立的关系，秉持的指导思想是民强国弱、民弱国才能强。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/驭民五术-2.jpg)
+“弱民”成为了强大国家机器的核心思想。
 
-灾难或许并不可怕，总有渡过的办法，真正可怕的是遗忘，让灾难一次次的重演！中共给中国人灌输了太多的仇恨教育，由于仇恨，不懂感恩，由于仇恨变得暴虐麻木，总是那么的不去深思。仇恨教育下人们怀疑的太多，信任的太少，孤单冷漠猜疑，凡是事不关己，没有必要去铭记，遗忘反而是种洒脱！
+接下来的秦统治者们提炼了《商君书》的“精髓”，形成了一直延续至今、并被共产党演绎得炉火纯青、残暴统治人民的《驭民五术》。
 
-相对于仇恨教育，我们缺少太多的勇敢教育。勇于担当，勇于探索，勇于挑战，勇于在错误中反思……仇恨让人狭隘而自私，勇敢让人包容而博爱！让我们多一些勇敢，少一些仇恨，中共灭了，未来一切都会慢慢变好！
+这是中国人噩梦的开始，也是国人奴性的根源。
 
-撰稿/发布：一叶知秋
+何为《驭民五术》？
+
+就是愚民、弱民、疲民、辱民、贫民。
+
+愚民就是控制、统一思想和价值观，让你脑子想什么统治者说了算，不能让老百姓有独立思考的能力，不能产生自己的想法。
+
+弱民就是“以弱驱强、以奸驭良”。
+
+利用弱者对有钱有能力的人施加各种制约，全方位进行打击削弱，让有能力的人没办法与统治者对抗，最终达成用弱者干掉强者，最后只剩下弱者，达到更加便于统治者统治管理百姓的目的。
+
+疲民就是让你为了生计而疲于奔命，没时间产生想法，满脑子只剩下养家糊口的念头，让你没精力对抗强权。
+
+贫民就是横征暴敛、加强赋税让你积累不了财富没什么钱，但是会让你有口饭吃别饿死，这样就会让百姓心理上没有了安全感。
+
+当权者再玩弄一些小花招，给一些小恩惠，让一直贫苦的百姓一时间不知如何是好并感激涕零。
+
+“无恒产则无恒心”，也就没有了心力去对抗不公，也就安分老实了，为了不饿死也就听命并依赖于强权了。
+
+心理学上有一个专有名词叫“斯德哥尔摩综合症”， 是指犯罪过程中的被害人对于加害人产生情感认同、依赖等，并结成融洽、友好关系，甚至反过来帮助加害人的一种情感联结。
+
+“斯德哥尔摩综合症”就很好地解释了这一点。
+
+辱民就是让老百姓没有尊严。统治者认为尊严不属于百姓，并鼓励相互检举揭发。百姓相互之间怀疑没有了信任感，也就无法凝聚抱团，对执政者也就无法构成威胁。
+
+让百姓不知道什么是尊严，剩下的强权的威严了。被剥夺了一切的没有尊严的百姓就会变的低眉顺眼、唯唯诺诺、战战兢兢、俯首帖耳，就更容易被强权践踏。
+
+但“存在”就会有平衡，倾斜的久了就会有“力”来介入让失衡回归平衡。
+
+阴邪的商鞅虽然给帝王们贡献了残暴的驭民术，但并未为自己和残暴的统治者提供退路，商鞅最终被秦惠文王杀掉并被“车裂”，秦王朝也未能长命。
+
+“残暴治理”理念的“开创者”或“升级者”最后都会被自己的“创意”灭掉，这在世界历史上已上演了无数次。
+
+“驭民五术”在中国存活了两千多年后，非法夺取政权的CCP不但全盘接受，并将《驭民五术》驾驭使用的登峰造极，让这个曾经勤劳、善良、智慧、勇敢的民族变得懦弱、自私、愚昧无知，成为世界的弃儿并正在走向地狱的路上。
+
+但共产党残暴统治中国人民的同时也在迎它接走向覆灭末日的到来。
+
+2020年六月四日一个象征着中华民族新生的新中国联邦诞生了。
+
+在郭文贵先生引领的新中国联邦爆料革命下，中国人民正在从沉睡中被唤醒～
+
+一颗颗苏醒的希望星火闪烁在世界各地，并迅速连结形成燎原之势，烧向正在摧毁中华民族和世界的邪魔共产党。
+
+貌似强悍而内在已腐败溃烂、千疮百孔的共产党的庞大躯体，正在熊熊燃烧的烈火中扭曲挣扎。
+
+而奴役了中国人民两千多年的“驭民术”也正随着共产党那发出哀嚎、腐臭的躯壳一同走向炼狱。
+
+它们将被铲除殆尽、从这个星球上灰飞烟灭！
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-2.jpg)
+
+**校对/发稿：**Fei797
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
+
+
+
 
  
 
