--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,15 +1,151 @@
 ---
-title: 新中国联邦今后的四大目标
+title: 两年来，CDC无视数据，甚至撒谎,将自然免疫当成阴谋论
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981722/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1981794/)
 
-文编：东京樱花团/樱花传媒
-视频:东京樱花团/中文小视频组
+[https://gtv.org/video/id=6204153b585ecc15d73f7d61](https://gtv.org/video/id=6204153b585ecc15d73f7d61)
 
-2月6日，郭文贵先生在GTV大直播透露，今年新中国联邦灭共的最重要环节，就是竭力阻止排华。第二，唤醒更多的同胞，加入爆料革命，让大江南北的中国人得到喜币和未来的躺平币。第三，发展G教育(GEDU)，招聘原新东方的教师，给与原工资的1.5倍以上的HDO或Hcoin待遇。第四，继续以乐灭共，唱尽中共流行歌曲，让中共无歌可唱。
+Rep. Thomas Massie
+托马斯·马西议员
 
-*编辑、发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+One of the biggest scandals during this whole pandemic, is the cover up
+在整个大流行期间, 最大的丑闻之一就是掩盖
+
+That’s been committed by Fauci and the CDC, especially the CDC
+福奇和疾病预防控制中心已经承认，尤其是疾病预防控制中心
+
+about the effectiveness of immunity that’s conferred after a natural infection
+关于自然感染后赋予的免疫力的有效性
+
+after you recover from that
+在你从自然感染中恢复后
+
+they’ve completely ignored that
+他们完全忽略了这一点
+
+They want everybody to get vaccinated
+他们希望每个人都接种疫苗
+
+even those who don’t need vaccinated
+即使是那些不需要接种疫苗的人
+
+and the science if you follow the science on this
+关于科学，如果你遵循这方面的科学
+
+The Moderna trial showed there was no benefit of the vaccine to those who recov-ered from infection
+莫德纳试验表明，疫苗对那些从感染中恢复过来的人没有好处
+
+The Pfizer trial showed there was no benefit to those who had recovered from in-fection from the vaccine
+辉瑞的试验表明，疫苗对那些从病毒感染中恢复过来的人没有任何好处
+
+A recent study with 52,000 people at the Cleveland Clinic
+最近在克利夫兰诊所对52,000人进行的一项研究表明
+
+300 plus of whom did not receive the vaccine
+其中1300多人没有接种疫苗
+
+but had prior infection showed that none of them got reinfected, symptomatically
+但之前曾经感染过，结果表明他们没有人再次感染，或有症状
+
+and then if you want to compare the efficacy of immunity from recovering from COVID to that of the vaccine
+然后如果你想比较从 COVID 中恢复的免疫力与疫苗的功效
+
+the biggest study out there is the whole country of Israel
+最大的研究的国家是整个以色列
+
+Tel Aviv University, 6 million participants in this study, 6 million data points
+以色列特拉维夫大学的600万参与者参与了这项研究，600 万个数据点
+
+And it showed there’s virtually no difference actually is it showed a little bit
+它表明实际上几乎没有差异，它显示了一点
+
+but probably not statistically significant, a little bit better
+但可能没有统计学意义，对自然感染的免疫力要好一点
+
+immunity from natural infection and before you all report this
+在你们所有人报告之前
+
+I’m not saying go out and get the virus instead of getting the vaccine
+我不是说出去感染病毒而不去接种疫苗
+
+The vaccine can save lives and certain
+疫苗可以挽救生命和肯定的
+
+but there’s no need, the science shows this
+但没必要，科学证明了这一点
+
+There’s no need to get the vaccine if you’ve already recovered from COVID
+如果您已经从COVID中康复，则无需接种疫苗
+
+And then there’s no need to expose yourself to that danger
+然后就没有必要让自己暴露在那种危险之中
+
+The CDC knows this, they admitted to me on a recorded phone call
+疾病预防控制中心知道这一点，他们通过录了音的电话向我承认了这一点
+
+I’ll be glad to give you that they knew they were misreporting the results of the Pfizer data
+我很高兴告诉你他们知道他们误报了辉瑞数据的结果
+
+Reporter
+记者
+
+Number one you didn’t answer whether or not you’ve been vaccinated
+第一个你没有回答你是否接种过疫苗
+
+Rep. Thomas Massie
+托马斯·马西议员
+
+Well first of all, it’s none of your business
+好吧，首先，这不关你的事
+
+But I’m going to tell you, I’m not vaccinated
+但我要告诉你，我没有接种疫苗
+
+And until there’s some science
+直到有一些科学依据
+
+by the way I have a Master’s of Science degree from MIT
+顺便说一句，我拥有麻省理工学院的理学硕士学位
+
+I’m not a virologist, but I can read data
+我不是病毒学家，但我可以读取数据
+
+Everybody just needs to read it
+每个人只需要阅读它
+
+Don’t put your head in the sand. Look at the data.
+不要把头埋在沙子里，看看数据
+
+I’m not going to get the vaccine until there’s data that shows
+我不会接种疫苗，直到有数据表明
+
+that it will improve upon the immunity
+它会提高免疫力
+
+that’s been conferred to me as a result of a natural infection that I had
+由于我的一次自然感染，而我被授予了这一权利
+
+**原视频链接**[:](https://twitter.com/repthomasmassie/status)[https://twitter.com/repthomasmassie/status](https://twitter.com/repthomasmassie/status)
+
+Date:02/06/2022
+原视频标题: For 2 years, CDC ignored the data and even lied about it to treat natural immunity like a conspiracy theory
+两年来，CDC无视数据，甚至撒谎，将自然免疫当成阴谋论
+原视频日期：2022/02/08
+原视频链接https://twitter.com/repthomasmassie/status/1490783499883847680?s=24
+任务编号：KE392(3699)
+视频时间段 : 0:00-2:34
+
+英听校：洛杉矶盘古农场 – Layka
+翻译：洛杉矶盘古农场 – Layka
+翻译终校：洛杉矶盘古农场 – Mike Li
+字幕+视频制作：洛杉矶盘古农场-天涯行
+审片：洛杉矶盘古农场- 银龙
+发布：洛杉矶盘古农场 – 彩虹 Rainbow
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
