--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,21 +1,9 @@
 ---
-title: 针下亡魂｜希腊 21 岁足球运动员接种疫苗后死亡
+title: 2/9/2022 文贵直播：为找回中国人70年来失去的财富、尊严和公正，文贵将让自己变得一无所有，到伦敦跟UBS打官司，再到日本与中共短兵相接，让中共国每个角落都将直接听到七哥的声音
 ---
-`關注組` [轉載自GNews](https://gnews.org/zh-hans/1982043/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1982088/)
 
-**撰文/ 疫情关注组｜发布日期/ 10/02/2022**
-![](https://assets.gnews.org/wp-content/uploads/2021/10/New-Looks-In-Autumn-Style123445_2.jpg)
-**更多资讯请关注官方盖特（Please follow our Gettr：[https://gettr.com/post/pl6k0218bf](https://gettr.com/post/pl6k0218bf)）**
-
-隶属于伊利乌波利具乐部的希腊 21 岁足球运动员 Alexandros Lampis ，在本月初（2日）对阵 Ermionida 的比赛中，即开场14分钟时，因心脏骤停而倒在赛场上。
-
-最令人遗憾的是，由于当时体育场内并没有除颤器可用，Alexandros 足足等了 20 分钟，才等到救护车赶到。之后不久，伊利乌波利具乐部在官网宣布了Alexandros 的死讯。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/希臘-21-歲足球運動員接種疫苗後死亡.jpeg)
-
-根据希腊当局的防疫规定，获得上场比赛资格的运动员必须接种 COVID-19 疫苗。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/希臘-21-歲足球運動員接種疫苗後死亡.jpg)
-来源｜[TheSun](https://www.thesun.co.uk/sport/17524888/alexandros-lampis-dies-21-greek-footballer-cardiac-arrest/)
+秘密翻译组-北美组
 
  
 
