--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,52 +1,15 @@
 ---
-title: 全球中共病毒病例数在过去一周内骤降了17%
+title: 新中国联邦今后的四大目标
 ---
-`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1981536/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981722/)
 
-作者：纽约香草山农场 – 四季
+文编：东京樱花团/樱花传媒
+视频:东京樱花团/中文小视频组
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/logo-5.jpg)
+2月6日，郭文贵先生在GTV大直播透露，今年新中国联邦灭共的最重要环节，就是竭力阻止排华。第二，唤醒更多的同胞，加入爆料革命，让大江南北的中国人得到喜币和未来的躺平币。第三，发展G教育(GEDU)，招聘原新东方的教师，给与原工资的1.5倍以上的HDO或Hcoin待遇。第四，继续以乐灭共，唱尽中共流行歌曲，让中共无歌可唱。
 
-
-
-
-
-据[布赖特巴特新闻网](https://www.breitbart.com/health/2022/02/09/coronavirus-in-retreat-global-case-counts-plunge-17-in-past-week/)2月9日报道， 世界卫生组织周二宣布，过去一周全球中共病毒病例数与过去同期相比下降了17%，其中仅美国就下降了50%，而全球死亡人数下降了7%。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/GE-02-640x480-1.jpg)Michael M. Santiago/Getty, Images
-
-世界卫生组织表示，Omicron变体的流行率在全球范围内有所增加。然而，许多早期曾报告因Omicron变体而导致病例数上升的国家现在报告说，自2022年1月初以来，新病例总数有所下降。
-
-随着新的统计数字的出现，世界各地要求结束强制口罩令和强制性疫苗接种的呼声越来越高。世界各国政府也都在寻求放松限制。
-
-澳大利亚将很快向已接种疫苗的游客重新开放边境。继丹麦和挪威之后，瑞典也在取消大部分大流行病规定。在加拿大，争取摆脱所有中共病毒限制的运动已经成为全球头条新闻。
-
-就在本周，美国的加利福尼亚州、康涅狄格州、特拉华州、新泽西州和俄勒冈州的州长表示，他们将结束全州范围内的室内口罩规定，其中一些适用于学校，另一些适用于公共场所。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2月.jpg)
-
-编辑/校对/发稿：小鹿
-
-
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场**** ****GTV****–****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场**** ****GTV-MOS TALK**** ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场**** ****Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场**** ****YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 ****Discord**](https://discord.gg/ChqXAHd)
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/logo-5.jpg)
-
-
-
-
-
+*编辑、发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
