--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,39 +1,33 @@
 ---
-title: 2022.2.9大直播后记：北京冬奥会开幕式的假
+title: 2月9日大直播后记：独裁国家政权都崇拜暴力美学
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1981956/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1982031/)
 
-**整理：Rianna、Lucy Liu
-编辑：Candy**
+整理：清水冷香 Lucy Liu
+编辑：文泓
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-420.png)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/15-2.png)图片来源：墨尔本雅典娜农场设计组
 
 
-请问中国同胞们，你们谁到现场去看过开幕式了？我的战友，郭文贵的战友，爆料革命的核心人物，未来你会看到视频出来，有人吗？！
+这次北京冬奥会的“以假为真”，历史上的苏联也一样。在1935年和1980年两届奥运会，你问当时参加的（国家），哇塞，它们都太伟大了！这种力量没人能改变，谁也干不了它（独裁国家）。
 
-现场所有的外国人，个个惊慌失措。但是所有人被那个大屏、被张艺谋导演震撼了，因为外国人去的国家太小。你把非洲那些国家，甭说，你看给他拿一个摩托罗拉手机，都觉得是高科技。你拿个过去的大哥大都觉得高科技、外星科技，他们见过什么世面呢？！忽悠他们，康佳大屏一搞，就把一个电脑放在人眼睛上，你给他弄啥他看啥。
+当时苏联搞过一个军事演习，叫西方-81号军事演习。当时说是20万大军拉练，人类战争史上最牛叉的、最大规模的一次军事演习。调集了苏联红军所有的军队，所有的（演习）整完以后，这场陆海空多兵种军事演习，（起初）说是20万，最后证明是60万大军。
 
-结果是真的，现场那种政治操控的巨大威胁。普京看透了，说，你现场根本就没人，你吹了半天根本没人，这些东西你接下去没法解释的。然后普京多一分钟都不想呆在这儿。你还不兑现，特别是黄金，作为储备兑现，作为法币。最后翻脸了，人家不干了。
+这次美国和苏联整个（模拟）较量以后，美国彻底惨败。可把欧洲吓坏了，就这种希特勒和斯大林崇拜的军事暴力美学，也是共产党崇拜的，通过这次军演达到了极致。坦克装甲部队、潜水艇、机械化部队全面参与，苏联的20万大军，瞬间就能把欧洲碾平。
 
-大家记住啊，这时候谁去了？马克龙作为法国的三驾马车（之一）、两架马车德国和法国去俄罗斯见普京：求求你了，大爷！你不要打乌克兰，咱好好说！你的天然气，所谓的北溪2号，咱可以谈。法国给你承诺，买你3000亿美元的所有的天然气，你不打乌克兰行不行？然后再聊聊在北京的看法。 本来见面是三个小时，最后谈了五个小时。
+把欧洲吓得真的是浑身发抖啊，这可怎么战呢？欧洲根本战不了，就找美国来了。俄罗斯这个战斗民族不是吹出来的，也不是盖出来的，把欧洲绝对是吓趴下了。美国人给的答案非常简单，咱是打不过它，美国人就这么真实。
 
-听说普京大谈北京，他说，“你们老说我们跟中国亲，你们这帮孙子不跟我玩啊。咱们是亲兄弟啊，你不跟我玩，我得找个人当托儿啊。”他说，“你看他们开幕式完全都是假的，雪都是假的。”普京的其中一个女朋友就是滑雪芭蕾舞的，去都不让她去。那个雪污染以后，普京就说：我当场问了中国官员，中国官员说没事儿。那个雪的化学成分污染大地，万年不会散去，他们说没事儿！
+所以，后来美国就有了所谓新的军事技术，太空飞机、无人机、B2等。当时出了两个将军，这个哥们是个牛叉的人，美国、苏联军队（历史）上最牛叉的设计师，还有他的博物馆。他把战争这个东西玩到了极致。他的学生是谁呀？叫列昂尼德·伊瓦绍夫，是原苏联的副总参谋长、国防部部长助理和地缘政治学院院长。
 
-制雪机是哪儿造的？一大半是俄罗斯造的，人家是有规格的，干啥用的都是特定的。中国全拿山上去，在一个完全没有雪的雪山上还弄出一个滑雪跑道，然后搞了一个全球的冬奥会。这从当年1928年在法国举行的冬奥会开始，到今天就是个人类的耻辱。
+这次在普京离开北京后，他公开发声要求普京辞职。他说，你以俄罗斯的政治前途和国家安全为代价，就想跟乌克兰打仗。而且他明确地说，你跟美国打没门儿，你是打不过的。他没有提及中共国。但是，私下里他说，（普京）和中共国的沟通、勾兑，玩所谓的国际三角关系，还有（普习）个人领导关系，你就连个狼狈为奸都配不上，就是一场肮脏的老鼠和狮子的游戏。（中共国的事情）让人情何以堪呐？
 
-然后普京给马克龙很好地聊了聊北京的经历，说：他们太在乎形式主义了，吃个晚餐啊，搞了一大堆，要让我点评，我才不跟他们吃去呢。染上病怎么办呢？中东啊，中东那几个傻国家掐架掐得要死，都想在中共国表现我是中东老大。
+资料来源：[2022年2月9日 文贵大直播](https://gettr.com/streaming/ptgw8b5f32)
+发布：tianzhihuan
 
-最后一分钟，沙特王子说：钱不给是吧？我同意你用人民币结算石油了，现在需要美元呐！你给我弄500亿、1000亿美元，先让我接上点美元。中共说：“不行，你来了以后再说。”“那不行，我去之前你先给我。”沙特跟中共国之间，就像郭宝胜和夏业良一样。
-
-普京讲出这些过程的时候，你看看中东他们，就这样被共产党玩。沙特王子最有钱却是世界上最没有现金的。然后说，“那就以我染上病毒为由我不去了，美国还威胁我，不让我参加，你不给我钱，我咋去啊？”这个当时是沙特排在第二号的人物，什么泰国诗琳公主等等就是打酱油的。
-
-***发布：Candy***
-
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
