--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,15 +1,41 @@
 ---
-title: 古今司马懿刘亚洲西颦东效（上）
+title: 诺贝尔医学奖得主 Luc Montagnier 教授去世的消息未被证实
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981941/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1981981/)
 
-文编：东京樱花团/樱花传媒
-视频:东京樱花团/中文小视频组
+撰稿：小雨
+![](https://assets.gnews.org/wp-content/uploads/2022/02/FWU374ZYKL66EM5YPUEIP2IDCQ-1.jpg)网络图片
+12小时之前，社交媒体上传播着2008 年诺贝尔医学奖得主 Luc Montagnier 教授过世的消息。但到目前为止，还没有官方消息或其他法国和国际媒体证实这一消息。
 
-1月5日，郭文贵先生在GTV大直播透露，刘亚洲认为司马懿的故事不真实，有虚构成份。司马昭、司马炎和曹植这几个人物是值得分析的。刘亚洲是中共国最推崇司马懿的三个人之一，他对体制很不满。他有野心，想当国家安全委员会主席。
+法国网站France Soir在Twitter2 月9日上发布如下推文：
 
-*编辑、发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+“*2008 年诺贝尔医学奖得主 Luc Montagnier 教授于 2022 年 2 月 8 日在他的孩子们面前安详地去世。*
+*1932 年 8 月 18 日 – 2022 年 2 月 8 日*
+
+*愿这位伟人的灵魂安息！*”
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-971.png)[推特链接](https://twitter.com/france_soir/status/1491361948407336971)
+
+网站France Soir在几小时后发布了一篇悼文：
+
+*Luc Montagnier 教授（1932 年 8 月 18 日 – 2022 年 2 月 8 日），在塞纳河畔纳伊的美国医院去世，享年89岁。教授最忠实的合作者之一 Gérard Guillaume 医生告诉我们，Luc Montagnier 教授在孩子们的陪伴下平静地离开了。*
+
+*Luc Montagnier 教授是一位生物学家和病毒学家，最重要的是，教授还是一位为科学而活的具有非凡智慧的人。除了因发现艾滋病病毒而获得 2008 年诺贝尔医学奖外，教授还与世界上最伟大的科研机构一起工作。Luc Montagnier 教授担任 CNRS名誉研究主任，巴斯德研究所教授，纽约城市大学皇后学院分子与细胞生物学中心主任，上海交通大学研究所所长。多年来，Luc Montagnier 教授通过研究支持了科学院和美国国家医学院。为此，他获得了无数的奖项和荣誉。*
+
+*尽管Luc Montagnier 教授年事已高，尽管他在人生的晚年遭受了所有批评，尤其是来自科学界的一部分，但教授一直为自由科学而奋斗。我们很幸运能够在 FranceSoir 多次接待他，并希望将所有荣誉都授予他。*
+
+曾邀请Luc Montagnier 教授参加米兰示威活动的参议员 Gianluigi Paragone 在他的 Facebook 个人资料中谈到了这件事。他表示对此也知之甚少或一无所知：“我无法确认或否认。我只知道几天来我们一直试图与他的随行人员取得联系，但我们没有成功。”
+
+**简评：**
+
+今天读到此消息，只有震惊，也有不少的猜想。过去两年中，高龄的Luc Montagnier 教授到处奔波做演讲和接受采访，宣传病毒和疫苗的真相，用自己的学术声望去试图唤醒被洗脑的民众。我们钦佩Luc Montagnier 教授的学识和人品，从教授身上我们看到一个真正尊重科学和真理的学者和科学家。
+
+希望是虚惊一场。无论如何，我们为Luc Montagnier 教授祈祷。
+
+新闻链接：[Yellow on Luc Montagnier, guru of no vax. France Soir: “He’s dead”. But there are no confirmations](https://www.unionesarda.it/en/yellow-on-luc-montagnier-guru-of-no-vax-france-soir-he39-s-dead-but-there-are-no-confirmations-sc5q6ize)
+
+[L’éminent professeur Luc Montagnier s’est éteint le 8 février 2022](https://www.francesoir.fr/societe-sante/leminent-professeur-luc-montagnier-sest-eteint-le-8-fevrier-2022)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
